--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,8 @@
     <title>CP - WEB DEV</title>
     <H1>Vinharia SmoothPath</H1>
 </head>
+
 <body>
-    
+    <script src="src.js/js/script.js"></script>
 </body>
 </html>
