Arrumando apresentação no console

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CP - WEB DEV</title>
-    <H1>Vinharia SmoothPath</H1>
+    <H1>Vinheria SmoothPath</H1>
 </head>
 
 <body>
